Removed common module dependency